# -

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/calculator/: __init__.py  app.py
tests/: test_app.py
