[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-calculator"
version = "0.1.0"
description = "Простой калькулятор с графическим интерфейсом на Tkinter"
authors = [{ name = "GPT Assistant" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
gui-calculator = "calculator:main"
